# ChurnEngine

./: .gitignore  README.md
Churn/: CMakeCache.txt  CMakeLists.txt  GameEngine  Makefile  cmake_install.cmake
Churn/libs/freetype-gl/: config.h  freetype-gl.h  texture-atlas.c
Churn/libs/freetype-gl-copy/: freetype-gl.h  opengl.h
Churn/libs/freetype-gl-mine/: texture-atlas.c  v.txt
Churn/libs/freetype/include/freetype2/freetype/config/: ftoption.h
Churn/libs/freetype/lib/: libfreetype.la
Churn/libs/freetype/lib/pkgconfig/: freetype2.pc
Churn/libs/glad/: glad.c  glad.h
Churn/src/: main.cpp
Churn/src/graphics/: Batch2DRenderer.cpp  Batch2DRenderer.hpp  CMakeLists.txt  label.cpp  label.hpp  renderable2D.h  renderer2D.hpp  shader.cpp  shader.h  simple2Drenderer.cpp  simple2Drenderer.hpp  sprite.cpp  sprite.hpp  staticSprite.cpp  staticSprite.hpp  window.cpp  window.hpp
Churn/src/graphics/buffers/: buffer.cpp  buffer.hpp  indexbuffer.cpp  indexbuffer.hpp  vertexarray.cpp  vertexarray.hpp
Churn/src/graphics/layers/: layers.cpp  layers.hpp  tilelayer.cpp  tilelayer.hpp
Churn/src/graphics/layers/groups/: group.cpp  group.hpp
Churn/src/graphics/rendering/: Batch2DRenderer.cpp  Batch2DRenderer.hpp  CMakeLists.txt  renderable2D.h  renderer2D.hpp  simple2Drenderer.cpp  simple2Drenderer.hpp
Churn/src/graphics/sprites/: sprite.cpp  sprite.hpp  staticSprite.cpp  staticSprite.hpp  texture.cpp  texture.h
Churn/src/math/: CMakeLists.txt  mat4.cpp  mat4.hpp  math.hpp  radians.hpp  vec2.cpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp  vec4.hpp
Churn/src/shaders/: basic.frag  basic.vert  shader.cpp  shader.h
Churn/src/utils/: fileutils.cpp  fileutils.h  imageload.h  textload.cpp  textload.h  timer.hpp
